bberapa perbaikan
